Update email link in index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ button.submit-btn:hover{background:cyan;}
   <a href="https://wa.me/2348135055712" target="_blank" class="bg-green-500 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
     <i class="fab fa-whatsapp text-white text-lg"></i>
   </a>
-  <a href="mailto:youremail@example.com" class="bg-red-500 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
+  <a href="mailto:Marycool4hope@gmail.com" class="bg-red-500 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
     <i class="fas fa-envelope text-white text-lg"></i>
   </a>
 </div>
