--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ button.submit-btn:hover{background:cyan;}
 
 <!-- FLOATING SOCIAL BUTTONS -->
 <div class="fixed left-5 top-1/3 flex flex-col space-y-4 z-50">
-  <a href="https://linkedin.com" target="_blank" class="bg-blue-700 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
+  <a href="https://https://www.linkedin.com/in/mary-john-b376a9318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="bg-blue-700 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
     <i class="fab fa-linkedin-in text-white text-lg"></i>
   </a>
   <a href="https://wa.me/2348135055712" target="_blank" class="bg-green-500 p-3 rounded-full hover:scale-110 transition flex items-center justify-center floating-btn">
